--- a/news.html
+++ b/news.html
@@ -36,12 +36,17 @@
       <h2>Where does it come From?</h2>
       <p>Contrary to popular belief, Lorem ipsum is not simply text, it has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden_Sydney College in Virginia, Looked up one of the more obscure Latin words, consectetur, from a Lorem ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
       <h2>Why do we use it?</h2>
-      <div class="text">
-        <img src="img/cherry-689.png">
-        <p>Contrary to popular belief, Lorem ipsum is not simply text, it has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden_Sydney College in Virginia, Looked up one of the more obscure Latin words, consectetur, from a Lorem ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
+      <div class="tex">
+        <div class="text">
+          <img src="img/cherry-689.png">
+          <p>Contrary to popular belief, Lorem ipsum is not simply text, it has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden_Sydney College in Virginia, Looked up one of the more obscure Latin words, consectetur, from a Lorem ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
+        </div>
       </div>
       <h2>Where does it come from?</h2>
-      <p>Contrary to popular belief, Lorem ipsum is not simply text, it has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden_Sydney College in Virginia, Looked up one of the more obscure Latin words, consectetur, from a Lorem ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
+      <p>Contrary to popular belief, Lorem ipsum is not simply text, it has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden_Sydney College in Virginia, Looked up one of the more obscure Latin words, consectetur, from a Lorem ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore totam officia exercitationem nisi nostrum deleniti, nobis amet porro maiores eveniet! Ullam sed minus quisquam quidem cumque, nesciunt esse officia distinctio.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit ea architecto, eligendi at aperiam accusantium sit est itaque ducimus explicabo quos nisi iste saepe eos odit quibusdam maiores voluptatum temporibus.
+      </p>
     </div>
   </main>
 
